hardikpthv/src/components/social/Social.css
.social {
  padding: 10px;
}

.social .list {
  display: flex;
  flex-flow: row wrap;
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.social .list .list-item img {
  padding: 10px;
  transition: all 0.5s ease;
}

.social .list .list-item img:hover {
  padding: 10px;
  transform: scale(1.2);
}

